# CS340-project

./: README.md  cmds.txt
.ccls-cache/@home@patrick@CS340-project/: passes@Hello@Hello.cpp  passes@Hello@Hello.cpp.blob
examples/: mul  multiply.c  multiply.ll  multiply1.bc  multiply1.ll
passes/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
passes/Hello/: CMakeCache.txt  CMakeLists.txt  Hello.cpp  Makefile  cmake_install.cmake
passes/NumOpCodes/: CMakeLists.txt  Makefile  NumOpCodes.cpp  cmake_install.cmake
passes/OptLoads/: optLoads.cpp
passes/PrintCode/: printCode.cpp
passes/RemNoRef/: CMakeCache.txt  CMakeLists.txt  Makefile  RemNoRef.cpp  cmake_install.cmake  test.ll  test1.bc  test1.ll  test2.ll
passes/RemoveCalls/: CMakeCache.txt  CMakeLists.txt  Makefile  RemoveCalls.cpp  cmake_install.cmake  foo.c  mul.ll
